@@ -276,12 +276,12 @@ test utf-20.1 {TclUniCharNcmp} {
 } {}
 
 test utf-21.1 {TclUniCharIsAlnum} {
-    # this returns 1 with Unicode 3 compliance
-    string is alnum \u1040\u021f
+    # this returns 1 with Unicode 6 compliance
+    string is alnum \u1040\u021f\u0220
 } {1}
 test utf-21.2 {unicode alnum char in regc_locale.c} {
-    # this returns 1 with Unicode 3 compliance
-    list [regexp {^[[:alnum:]]+$} \u1040\u021f] [regexp {^\w+$} \u1040\u021f]
+    # this returns 1 with Unicode 6 compliance
+    list [regexp {^[[:alnum:]]+$} \u1040\u021f\u0220] [regexp {^\w+$} \u1040\u021f\u0220]
 } {1 1}
 
 test utf-22.1 {TclUniCharIsWordChar} {
@@ -292,30 +292,30 @@ test utf-22.2 {TclUniCharIsWordChar} {
 } 10
 
 test utf-23.1 {TclUniCharIsAlpha} {
-    # this returns 1 with Unicode 3 compliance
-    string is alpha \u021f
+    # this returns 1 with Unicode 6 compliance
+    string is alpha \u021f\u0220
 } {1}
 test utf-23.2 {unicode alpha char in regc_locale.c} {
-    # this returns 1 with Unicode 3 compliance
-    regexp {^[[:alpha:]]+$} \u021f
+    # this returns 1 with Unicode 6 compliance
+    regexp {^[[:alpha:]]+$} \u021f\u0220
 } {1}
 
 test utf-24.1 {TclUniCharIsDigit} {
-    # this returns 1 with Unicode 3 compliance
-    string is digit \u1040
+    # this returns 1 with Unicode 6 compliance
+    string is digit \u1040\uabf0
 } {1}
 test utf-24.2 {unicode digit char in regc_locale.c} {
-    # this returns 1 with Unicode 3 compliance
-    list [regexp {^[[:digit:]]+$} \u1040] [regexp {^\d+$} \u1040]
+    # this returns 1 with Unicode 6 compliance
+    list [regexp {^[[:digit:]]+$} \u1040\uabf0] [regexp {^\d+$} \u1040\uabf0]
 } {1 1}
 
 test utf-24.3 {TclUniCharIsSpace} {
-    # this returns 1 with Unicode 3 compliance
-    string is space \u1680
+    # this returns 1 with Unicode 6 compliance
+    string is space \u1680\u180e
 } {1}
 test utf-24.4 {unicode space char in regc_locale.c} {
-    # this returns 1 with Unicode 3 compliance
-    list [regexp {^[[:space:]]+$} \u1680] [regexp {^\s+$} \u1680]
+    # this returns 1 with Unicode 6 compliance
+    list [regexp {^[[:space:]]+$} \u1680\u180e] [regexp {^\s+$} \u1680\u180e]
 } {1 1}
 
 testConstraint teststringobj [llength [info commands teststringobj]]
